# GeoDistance-Calculator

./: CMakeLists.txt  CMakePresets.json  README.md
gtest/: geolocation_gtests.cpp
helper/: io.cpp  io.h
src/: constants.h  geolocation.cpp  geolocation.h  main.cpp
